--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,6 +11,7 @@ install:
   - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-card-delivery.jar" -PassThru
 
 build_script:
+  - ps: chmod +x ./gradlew
   - ps: ./gradlew test --info "-Dselenide.headless=true"  # стартуем Selenide в Headless-режиме (см.ниже)
 
 on_finish:
